--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,29 +13,29 @@ services:
       - .:/usr/src/app
     environment:
       - FLASK_DEBUG=1
-      - APP_SETTINGS=project.server.config.DevelopmentConfig
+      - APP_SETTINGS=project.server.config.DeployConfig
     depends_on:
       - redis
 
   worker:
     image: web
-#    command: python3 manage.py run_worker
+    command: python3 manage.py run_worker
     volumes:
       - .:/user/src/app
     environment:
-      - APP_SETTINGS=project.server.config.DevelopmentConfig
+      - APP_SETTINGS=project.server.config.DeployConfig
     depends_on:
       - redis
 
   redis:
     image: redis:5.0.7-alpine
 
-  dashboard:
-    build: ./project/dashboard
-    image: dashboard
-    container_name: dashboard
-    ports:
-      - 9181:9181
-    command: rq-dashboard -H redis
-    depends_on:
-      - redis
+#  dashboard:
+#    build: ./project/dashboard
+#    image: dashboard
+#    container_name: dashboard
+#    ports:
+#      - 9181:9181
+#    command: rq-dashboard -H redis
+#    depends_on:
+#      - redis
